RSS widget: fix Refresh button overlapping

--- a/app/css/_app.scss
+++ b/app/css/_app.scss
@@ -3151,7 +3151,7 @@ body.no-edit .widgets-container .widget.tabbed:before {
 
 .widgets-container .widget.tabbed-corner.refreshable .wrefresh {
 	top: 8px;
-	right: 85px;
+	right: 110px;
 	box-shadow: none;
 	background: transparent;
 	display: block;
